<resources>
    <string name="app_name">QingTing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_name">主页</string>
    <string name="chat_page_name">聊天</string>
    <string name="user_page_name">我的</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">加载中...</string>
    <string name="no_result">没有结果</string>
    <string name="load_error">加载失败，请检查网络</string>
    <string name="no_music_playing">当前没有音乐在播放</string>
    <string name="no_next_music">当前是最后一首音乐</string>
    <string name="no_last_music">当前是第一首音乐</string>

    <string name="add_music_to_next">已添加到下一首播放</string>
    <string name="song_initial_length">0:00</string>
    <!--    user page-->
    <string name="default_username">用户名称</string>
    <string name="no_login_username">点击登录</string>
    <string name="login_expire_message">登录状态过期，请重新登录</string>
    <string name="login">登  录</string>
    <string name="welcome">Wel-Come</string>
    <string name="register">注  册</string>
    <string name="no_user">没有账号?</string>
    <string name="go_to_login">去登录</string>
    <string name="user_pwd_invalid">账号或密码不满足要求</string>
    <string name="user_invalid">账号不满足要求，需要不小于6位且不大于20位</string>
    <string name="pwd_invalid">密码需要不小于6位且不大于20位,同时包含字母和数字</string>
    <string name="login_fail">登录失败</string>
    <string name="login_error">登录错误</string>
    <!--    tab name-->
    <string name="tab_name_default">默认排序</string>
    <string name="tab_name_order_by_name">名称排序</string>
    <string name="nullptr_token">当前未登录</string>
    <string name="play_list_request_fail">获取歌单数据失败</string>
    <string name="play_list_request_success">更新歌单数据成功</string>
    <string name="operate_playlist_fail">操作歌单失败</string>
    <string name="operate_playlist_success">操作歌单成功</string>

    <string name="insert_playlist_fail">添加歌单失败</string>
    <string name="insert_playlist_success">添加歌单成功</string>

    <string name="request_fail">网络请求失败</string>


    <string name="update_playlist_fail">更新歌单失败</string>
    <string name="update_playlist_success">更新歌单成功</string>

    <string name="add_playlist_title">添加歌单</string>
    <string name="add_playlist_message">请输入歌单名称</string>

    <string name="update_playlist_title">更新歌单</string>
    <string name="update_playlist_message">请输入歌单名称</string>

    <string name="delete_playlist_title">删除歌单</string>
    <string name="delete_playlist_message">确认要删除这个歌单吗？</string>

    <string name="sure_message">确定</string>
    <string name="get_music_fail">获取本地歌单失败</string>

    <string name="get_playlist_music_fail">获取音乐失败</string>
    <string name="get_playlist_music_success">获取音乐成功</string>
    <string name="play_all_in_playlist">播放全部</string>
    <string name="no_net">当前没有网络</string>

<!--    menu-->
    <string name="update_name">更改名称</string>
    <string name="add_to_playlist">添加到歌单</string>
    <string name="add_to_playlist_duplicate">重复添加</string>
    <string name="delete_from_playlist">从歌单删除</string>
    <string name="delete_from_playlist_title">删除音乐</string>
    <string name="delete_from_playlist_success">删除成功</string>
    <string name="delete_from_playlist_fail">删除失败</string>
    <string name="delete_from_playlist_msg">确定要从歌单删除这首歌吗？</string>

    <string name="title_add_to_playlist">添加到歌单</string>
    <string name="add_to_playlist_success">添加成功</string>
    <string name="add_to_playlist_fail">添加失败</string>
    <string name="add">添加失败</string>

<!--    setting-->
    <string name="setting">设置</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logout_success">退出登录成功</string>
    <string name="setting_logout_title">退出登录</string>
    <string name="setting_logout_msg">确定要退出登录吗？</string>


<!--    播放列表-->
    <string name="playing_list_title">播放列表</string>

<!--    发现页-->
    <string name="discover_page_loading_tip_loading">正在发现美好...</string>
    <string name="discover_page_loading_tip_fail">加载失败，\n请再试试呢</string>
</resources>