<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@drawable/login_bg"
    >
    <TextView
        android:id="@+id/tips"
        android:text="@string/welcome"
        android:textSize="@dimen/login_title_text_size"
        android:textColor="@color/login_title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_name"
        android:layout_marginBottom="@dimen/login_title_margin"
        />
    <EditText
        android:background="@drawable/login_edit_text_bg"
        android:layout_height="0dp"
        android:layout_width="0dp"
        style="@style/login_edit_text"
        android:inputType="text"
        android:id="@+id/user_name"
        android:layout_marginTop="@dimen/username_top_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@fraction/login_editext_width_percent"
        app:layout_constraintHeight_percent="@fraction/login_editext_height_percent"
        />
    <TextView
        android:text="@string/user_invalid"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        android:id="@+id/user_name_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="@id/user_name"
        />
    <EditText
        android:background="@drawable/login_edit_text_bg"

        android:layout_height="0dp"
        android:layout_width="0dp"
        style="@style/login_edit_text"
        android:inputType="textPassword"
        android:id="@+id/pwd"
        android:layout_marginTop="@dimen/pwd_top_margin"
        android:layout_marginBottom="@dimen/pwd_bottom_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintWidth_percent="@fraction/login_editext_width_percent"
        app:layout_constraintHeight_percent="@fraction/login_editext_height_percent"
        />
    <TextView
        android:text="@string/pwd_invalid"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        android:id="@+id/pwd_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pwd"
        app:layout_constraintStart_toStartOf="@id/pwd"
        />
    <android.widget.Button
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#046D83"
        android:textSize="@dimen/login_btn_text_size"
        android:background="@drawable/login_btn_bg"
        android:id="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/pwd"
        android:layout_marginTop="@dimen/pwd_bottom_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"/>

    <TextView
        android:id="@+id/switch_mode_btn"
        android:textSize="@dimen/login_register_text_size"
        android:text="@string/no_user"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_margin="@dimen/login_register_margin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>